# computer-anasxon

backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  jwt.py  models.py
backend/app/database/: base.py
backend/app/database/models/: componets.py  request.py  user.py
backend/app/schemas/: auth.py  components.py  request.py  user.py
backend/app/utils/: fix_obj_ids.py  send_password.py
frontend/: dashboard.html  index.html  utils.js
frontend/js/: api.js  auth.js  dashboard.js  main.js  ui.js
