[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = ">=0.34.2,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
pymongo = ">=4.13.0,<5.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
pyjwt = ">=2.10.1,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pydantic = { extras = ["email"], version = ">=2.11.5,<3.0.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
